# gemd-python

./: .buildinfo  .coveragec  .gitignore  .travis.yml  CODEOWNERS  CONTRIBUTING.md  DELETE_ME  README.md  doc_requirements.txt  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.html  setup.py  test_requirements.txt  tox.ini
.github/: pull_request_template.md
_sources/: index.rst.txt
_static/: documentation_options.js
depth/: index.html  serialization.html  unit_parsing.html
docs/: Makefile
gemd/: __init__.py  exceptions.py
reference/: gemd.builders.html  gemd.builders.impl.html  gemd.client.html  gemd.client.json_encoder.html  gemd.demo.cake.html  gemd.demo.html  gemd.demo.material_run_example.html  gemd.demo.measurement_example.html  gemd.demo.strehlow_and_cook.html  gemd.demo.table_example.html  gemd.entity.attribute.base_attribute.html  gemd.entity.attribute.condition.html  gemd.entity.attribute.html  gemd.entity.attribute.parameter.html  gemd.entity.attribute.property.html  gemd.entity.attribute.property_and_conditions.html  gemd.entity.base_entity.html  gemd.entity.bounds.base_bounds.html  gemd.entity.bounds.categorical_bounds.html  gemd.entity.bounds.composition_bounds.html  gemd.entity.bounds.html  gemd.entity.bounds.integer_bounds.html  gemd.entity.bounds.molecular_structure_bounds.html  gemd.entity.bounds.real_bounds.html  gemd.entity.bounds_validation.html  gemd.entity.case_insensitive_dict.html  gemd.entity.dict_serializable.html  gemd.entity.file_link.html  gemd.entity.has_dependencies.html  gemd.entity.html  gemd.entity.link_by_uid.html  gemd.entity.object.base_object.html  gemd.entity.object.has_conditions.html  gemd.entity.object.has_material.html  gemd.entity.object.has_parameters.html  gemd.entity.object.has_process.html  gemd.entity.object.has_properties.html  (+155 more)
(+554 files in other folders)
